--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: notenote.link
 name: My linked notebook
 user_description: notenote.link
-notes_url: "https://notenote.link.netlify.app"
+notes_url: "https://keelancook.ml/notenote/notes"
 profile_pic: /assets/img/profile.png
 favicon: /assets/img/favicon.png
 copyright_name: MIT
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://notenote.link.netlify.app/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/notenote" # the subpath of your site, e.g. /blog
+url: "https://keelancook.ml/notenote" # the base hostname & protocol for your site, e.g. http://example.com
 encoding: utf-8
 
 # Build settings
