--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: notenote.link
-name: My linked notebook
-user_description: notenote.link
+title: Commonplace Book
+name: My Commonplace Book
+user_description: An online collection of my notes.
 notes_url: "https://keelancook.ml/notenote/notes"
 profile_pic: /assets/img/profile.png
 favicon: /assets/img/favicon.png
