--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Commonplace Book
+title: Keelan Cook
 name: My Commonplace Book
-user_description: An online collection of my notes.
+user_description: Commonplace books are a way to compile knowledge, usually by writing information into books. They have been kept from antiquity, and were kept particularly during the Renaissance and in the nineteenth century.
 notes_url: "https://keelancook.ml/notenote/notes"
 profile_pic: /assets/img/seal.png
 favicon: /assets/img/favicon.ico
