--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: Keelan Cook
 name: My Commonplace Book
 user_description: Commonplace books are a way to compile knowledge, usually by writing information into books. They have been kept from antiquity, and were kept particularly during the Renaissance and in the nineteenth century.
-notes_url: "https://keelancook.ml/notenote/notes"
+notes_url: "https://commonplace.ml"
 profile_pic: /assets/img/seal.png
 favicon: /assets/img/favicon.ico
 copyright_name: MIT
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://keelancook.ml/notenote" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://commonplace.ml" # the base hostname & protocol for your site, e.g. http://example.com
 encoding: utf-8
 
 # Build settings
