--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Keelan Cook
 name: My Commonplace Book
-user_description: Commonplace books are a way to compile knowledge, usually by writing information into books. They have been kept from antiquity, and were kept particularly during the Renaissance and in the nineteenth century.
+user_description: Commonplace books are a way to compile knowledge... They have been kept from antiquity, and were kept particularly during the Renaissance and in the nineteenth century. ([Wikipedia](https://en.wikipedia.org/wiki/Commonplace_book))
 notes_url: "https://commonplace.ml"
 profile_pic: /assets/img/seal.png
 favicon: /assets/img/favicon.ico
