--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Keelan Cook
 name: My Commonplace Book
-user_description: Thinking in progress. Notes under construction. If you want a place to start, you can [[Start Here]].
+user_description: Thinking in progress. Notes under construction. Expect typos and clarifying positions.
 notes_url: "https://commonplace.ml"
 profile_pic: /assets/img/seal.png
 favicon: /assets/img/favicon.ico
