testing obsidian on linuxbox

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,6 +1,6 @@
 {
   "newFileLocation": "current",
-  "newLinkFormat": "relative",
+  "newLinkFormat": "shortest",
   "attachmentFolderPath": "assets/img",
   "foldHeading": true,
   "alwaysUpdateLinks": false
