--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,17 +4,6 @@
     "type": "split",
     "children": [
       {
-        "id": "e2fc6a0ea56735cb",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "_notes/book-notes/Book List.md",
-            "mode": "source"
-          }
-        }
-      },
-      {
         "id": "5818c0b7b34194aa",
         "type": "leaf",
         "state": {
@@ -23,7 +12,20 @@
             "file": "_notes/book-notes/Gentle and Lowly (Ortland, 2020).md",
             "mode": "source"
           }
-        }
+        },
+        "group": "a9f397f0cd0751ed"
+      },
+      {
+        "id": "0e69d1975844c8ca",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "_notes/book-notes/Gentle and Lowly (Ortland, 2020).md",
+            "mode": "preview"
+          }
+        },
+        "group": "a9f397f0cd0751ed"
       }
     ],
     "direction": "vertical"
@@ -86,7 +88,7 @@
                 "showSearch": false,
                 "searchQuery": "",
                 "backlinkCollapsed": false,
-                "unlinkedCollapsed": true
+                "unlinkedCollapsed": false
               }
             }
           },
@@ -108,15 +110,15 @@
   },
   "active": "5818c0b7b34194aa",
   "lastOpenFiles": [
-    "_notes/book-notes/Gentle and Lowly.md",
-    "_notes/book-notes/Book List.md",
-    "_notes/book-notes/Deep Work (Newport, 2016).md",
-    "_notes/book-notes/Wright2006-uz.md",
-    "_notes/book-notes/Paul the Missionary (Schnabel, ).md",
-    "_notes/book-notes/anthropological-reflections-on-missiological-issues-hiebert-1994.md",
+    "_notes/book-notes/Gentle and Lowly (Ortland, 2020).md",
+    "The Golden Rule is not Karma.md",
     "_notes/Transformational Discipleship.md",
-    "_notes/Biblical Models of Discipleship.md",
-    "_notes/Biblical Theology of Mission.md",
-    "_notes/A Whole Bible Theology of Mission.md"
+    "_notes/Deliberate Practice.md",
+    "_notes/book-notes/Deep Work (Newport, 2016).md",
+    "_notes/Spiritual Disciplines.md",
+    "_notes/Transformational Discipleship has Much in Common with Habit Formation.md",
+    "_notes/book-notes/Book List.md",
+    "_notes/book-notes/Gentle and Lowly.md",
+    "_notes/book-notes/Wright2006-uz.md"
   ]
 }
