--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -19,11 +19,8 @@
         "id": "0e69d1975844c8ca",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "_notes/book-notes/Gentle and Lowly (Ortland, 2020).md",
-            "mode": "preview"
-          }
+          "type": "graph",
+          "state": {}
         },
         "group": "a9f397f0cd0751ed"
       }
@@ -81,7 +78,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_notes/book-notes/Gentle and Lowly (Ortland, 2020).md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -97,18 +93,17 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "_notes/book-notes/Gentle and Lowly (Ortland, 2020).md"
-              }
+              "state": {}
             }
           }
         ]
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
-  "active": "5818c0b7b34194aa",
+  "active": "0e69d1975844c8ca",
   "lastOpenFiles": [
     "_notes/book-notes/Gentle and Lowly (Ortland, 2020).md",
     "The Golden Rule is not Karma.md",
