--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,39 +4,29 @@
     "type": "split",
     "children": [
       {
-        "id": "5818c0b7b34194aa",
+        "id": "9f8867d1715a8fcf",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_notes/book-notes/Gentle and Lowly (Ortland, 2020).md",
+            "file": "_notes/The United States is the Most Diverse Country in the World.md",
             "mode": "source"
           }
-        },
-        "group": "a9f397f0cd0751ed"
-      },
-      {
-        "id": "0e69d1975844c8ca",
-        "type": "leaf",
-        "state": {
-          "type": "graph",
-          "state": {}
-        },
-        "group": "a9f397f0cd0751ed"
+        }
       }
     ],
     "direction": "vertical"
   },
   "left": {
-    "id": "c68c19fb645d7404",
+    "id": "bcf709d1f33c29a3",
     "type": "split",
     "children": [
       {
-        "id": "779868576ec69097",
+        "id": "fe48ec51f186c77d",
         "type": "tabs",
         "children": [
           {
-            "id": "97c1a40a9df9ffe1",
+            "id": "a3c5a11df6b33870",
             "type": "leaf",
             "state": {
               "type": "file-explorer",
@@ -44,12 +34,12 @@
             }
           },
           {
-            "id": "e193d55a96cb6e5d",
+            "id": "60ba311c11ccf7eb",
             "type": "leaf",
             "state": {
               "type": "search",
               "state": {
-                "query": "\"need to compile a separate note on the difference between importance\"",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -62,40 +52,40 @@
       }
     ],
     "direction": "horizontal",
-    "width": 436
+    "width": 300
   },
   "right": {
-    "id": "5b4fd4bb24a3ff94",
+    "id": "0fccead5ac0483f1",
     "type": "split",
     "children": [
       {
-        "id": "3b9b510d238b819c",
+        "id": "c815ab79385ee471",
         "type": "tabs",
         "children": [
           {
-            "id": "0b90540761215b93",
+            "id": "446bdae6e22b67af",
             "type": "leaf",
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_notes/book-notes/Gentle and Lowly (Ortland, 2020).md",
+                "file": "_notes/The United States is the Most Diverse Country in the World.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
                 "showSearch": false,
                 "searchQuery": "",
                 "backlinkCollapsed": false,
-                "unlinkedCollapsed": false
+                "unlinkedCollapsed": true
               }
             }
           },
           {
-            "id": "44a5b386e2ad94c1",
+            "id": "bc2a65d7311777f1",
             "type": "leaf",
             "state": {
               "type": "outline",
               "state": {
-                "file": "_notes/book-notes/Gentle and Lowly (Ortland, 2020).md"
+                "file": "_notes/The United States is the Most Diverse Country in the World.md"
               }
             }
           }
@@ -103,20 +93,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
-  "active": "5818c0b7b34194aa",
+  "active": "9f8867d1715a8fcf",
   "lastOpenFiles": [
-    "_notes/book-notes/Gentle and Lowly (Ortland, 2020).md",
-    "The Golden Rule is not Karma.md",
-    "_notes/Transformational Discipleship.md",
+    "_notes/The United States is the Most Diverse Country in the World.md",
+    "_notes/Develop Healthy Boundaries in Ministry Schedule.md",
     "_notes/Deliberate Practice.md",
-    "_notes/book-notes/Deep Work (Newport, 2016).md",
-    "_notes/Spiritual Disciplines.md",
-    "_notes/Transformational Discipleship has Much in Common with Habit Formation.md",
-    "_notes/book-notes/Book List.md",
-    "_notes/book-notes/Gentle and Lowly.md",
-    "_notes/book-notes/Wright2006-uz.md"
+    "_notes/Critical Issues Facing North American Missionaries.md",
+    "_notes/Core Missionary Task.md",
+    "_notes/book-notes/Gentle and Lowly (Ortland, 2020).md",
+    "_notes/United States is the most diverse country in the world.md",
+    "_notes/Gospel Saturation.md",
+    "_notes/Contextualization on the Mission Field.md",
+    "_notes/Urban Missions.md"
   ]
 }
