added testimonial ethic note

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_notes/The United States is the Most Diverse Country in the World.md",
+            "file": "_notes/Testimonial Ethic.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_notes/The United States is the Most Diverse Country in the World.md",
+                "file": "_notes/Testimonial Ethic.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -85,7 +85,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "_notes/The United States is the Most Diverse Country in the World.md"
+                "file": "_notes/Testimonial Ethic.md"
               }
             }
           }
@@ -97,15 +97,15 @@
   },
   "active": "9f8867d1715a8fcf",
   "lastOpenFiles": [
+    "_notes/Testimonial Ethic.md",
+    "_notes/The Golden Rule is not Karma.md",
+    "_notes/New Immigration is a Missionary Occasion.md",
+    "_notes/Mission of God.md",
+    "_notes/Mission and Missions.md",
+    "_notes/A Whole Bible Theology of Mission.md",
     "_notes/The United States is the Most Diverse Country in the World.md",
     "_notes/Develop Healthy Boundaries in Ministry Schedule.md",
     "_notes/Deliberate Practice.md",
-    "_notes/Critical Issues Facing North American Missionaries.md",
-    "_notes/Core Missionary Task.md",
-    "_notes/book-notes/Gentle and Lowly (Ortland, 2020).md",
-    "_notes/United States is the most diverse country in the world.md",
-    "_notes/Gospel Saturation.md",
-    "_notes/Contextualization on the Mission Field.md",
-    "_notes/Urban Missions.md"
+    "_notes/Critical Issues Facing North American Missionaries.md"
   ]
 }
