--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -65,8 +65,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
   "right": {
     "id": "0fccead5ac0483f1",
