--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,28 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "fabd0f84777ff96a",
+        "id": "d114bd093177a193",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "_notes/Christian Podcasts.md",
-            "mode": "source"
-          }
-        },
-        "group": "2e9dee7ec5879842"
-      },
-      {
-        "id": "154894dcd66a887e",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "_notes/Christian Podcasts.md",
-            "mode": "preview"
-          }
-        },
-        "group": "2e9dee7ec5879842"
+          "type": "empty",
+          "state": {}
+        }
       }
     ],
     "direction": "vertical"
@@ -81,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_notes/Christian Podcasts.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -97,9 +80,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "_notes/Christian Podcasts.md"
-              }
+              "state": {}
             }
           }
         ]
@@ -109,17 +90,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "fabd0f84777ff96a",
+  "active": "d114bd093177a193",
   "lastOpenFiles": [
+    "_notes/Pastors and missionaries should consider their own personal website.md",
+    "_notes/Students should have their own personal website.md",
+    "_notes/Starting a Personal Website.md",
+    "_notes/Things not to do on your personal website.md",
+    "_notes/Academics should have their own personal website.md",
+    "about.md",
+    "_notes/Untitled.md",
     "_notes/Christian Podcasts.md",
     "_notes/List of Christian Podcasts.md",
-    "_notes/Untitled.md",
-    "_notes/the church is a community of practice.md",
-    "_notes/book-notes/missions bibliography.md",
-    "_notes/book-notes/Missions Bibliography.md",
-    "_notes/Testimonial Ethic.md",
-    "_notes/The Golden Rule is not Karma.md",
-    "_notes/New Immigration is a Missionary Occasion.md",
-    "_notes/Mission of God.md"
+    "_notes/the church is a community of practice.md"
   ]
 }
