--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,9 +7,25 @@
         "id": "d114bd093177a193",
         "type": "leaf",
         "state": {
-          "type": "empty",
-          "state": {}
-        }
+          "type": "markdown",
+          "state": {
+            "file": "_notes/Starting a Personal Website.md",
+            "mode": "source"
+          }
+        },
+        "group": "4dc34938bcb8a3d7"
+      },
+      {
+        "id": "f46dc7688a105b2b",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "_notes/Starting a Personal Website.md",
+            "mode": "preview"
+          }
+        },
+        "group": "4dc34938bcb8a3d7"
       }
     ],
     "direction": "vertical"
@@ -65,6 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "_notes/Starting a Personal Website.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -80,7 +97,9 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {}
+              "state": {
+                "file": "_notes/Starting a Personal Website.md"
+              }
             }
           }
         ]
@@ -92,11 +111,11 @@
   },
   "active": "d114bd093177a193",
   "lastOpenFiles": [
+    "_notes/Starting a Personal Website.md",
+    "_notes/Academics should have their own personal website.md",
     "_notes/Pastors and missionaries should consider their own personal website.md",
     "_notes/Students should have their own personal website.md",
-    "_notes/Starting a Personal Website.md",
     "_notes/Things not to do on your personal website.md",
-    "_notes/Academics should have their own personal website.md",
     "about.md",
     "_notes/Untitled.md",
     "_notes/Christian Podcasts.md",
