--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -12,20 +12,31 @@
             "file": "_notes/Starting a Personal Website.md",
             "mode": "source"
           }
-        },
-        "group": "4dc34938bcb8a3d7"
+        }
       },
       {
-        "id": "f46dc7688a105b2b",
+        "id": "6c2985c10936a8ec",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_notes/Starting a Personal Website.md",
+            "file": "_notes/Academics should have their own personal website.md",
+            "mode": "source"
+          }
+        },
+        "group": "ce6c12b33c74179c"
+      },
+      {
+        "id": "2dd7c66eed89f0b8",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "_notes/Academics should have their own personal website.md",
             "mode": "preview"
           }
         },
-        "group": "4dc34938bcb8a3d7"
+        "group": "ce6c12b33c74179c"
       }
     ],
     "direction": "vertical"
@@ -81,7 +92,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_notes/Starting a Personal Website.md",
+                "file": "_notes/Academics should have their own personal website.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -98,7 +109,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "_notes/Starting a Personal Website.md"
+                "file": "_notes/Academics should have their own personal website.md"
               }
             }
           }
@@ -109,13 +120,13 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "d114bd093177a193",
+  "active": "6c2985c10936a8ec",
   "lastOpenFiles": [
-    "_notes/Starting a Personal Website.md",
     "_notes/Academics should have their own personal website.md",
+    "_notes/Things not to do on your personal website.md",
+    "_notes/Starting a Personal Website.md",
     "_notes/Pastors and missionaries should consider their own personal website.md",
     "_notes/Students should have their own personal website.md",
-    "_notes/Things not to do on your personal website.md",
     "about.md",
     "_notes/Untitled.md",
     "_notes/Christian Podcasts.md",
