--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,34 @@
     "type": "split",
     "children": [
       {
-        "id": "d114bd093177a193",
+        "id": "601d153550818ff5",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_notes/Starting a Personal Website.md",
+            "file": "_notes/Academics should have their own personal website.md",
+            "mode": "source"
+          }
+        }
+      },
+      {
+        "id": "0f625d730458db36",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "_notes/Students should have their own personal website.md",
+            "mode": "source"
+          }
+        }
+      },
+      {
+        "id": "44271483eb84bd95",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "_notes/Pastors and missionaries should consider their own personal website.md",
             "mode": "source"
           }
         }
@@ -52,7 +74,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "right": {
     "id": "0fccead5ac0483f1",
@@ -68,7 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_notes/Starting a Personal Website.md",
+                "file": "_notes/Students should have their own personal website.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -85,7 +108,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "_notes/Starting a Personal Website.md"
+                "file": "_notes/Students should have their own personal website.md"
               }
             }
           }
@@ -96,17 +119,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "d114bd093177a193",
+  "active": "0f625d730458db36",
   "lastOpenFiles": [
-    "_notes/Starting a Personal Website.md",
-    "_notes/Academics should have their own personal website.md",
-    "_notes/Things not to do on your personal website.md",
-    "_notes/Pastors and missionaries should consider their own personal website.md",
     "_notes/Students should have their own personal website.md",
+    "_notes/Pastors and missionaries should consider their own personal website.md",
+    "_notes/Academics should have their own personal website.md",
+    "_notes/Starting a Personal Website.md",
+    "_notes/Map of Content.md",
+    "_notes/Christian Podcasts.md",
+    "_notes/Things not to do on your personal website.md",
     "about.md",
     "_notes/Untitled.md",
-    "_notes/Christian Podcasts.md",
-    "_notes/List of Christian Podcasts.md",
-    "_notes/the church is a community of practice.md"
+    "_notes/List of Christian Podcasts.md"
   ]
 }
