--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -91,7 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_notes/Students should have their own personal website.md",
+                "file": "_notes/Pastors and missionaries should consider their own personal website.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -108,7 +108,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "_notes/Students should have their own personal website.md"
+                "file": "_notes/Pastors and missionaries should consider their own personal website.md"
               }
             }
           }
@@ -119,10 +119,10 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "0f625d730458db36",
+  "active": "44271483eb84bd95",
   "lastOpenFiles": [
-    "_notes/Students should have their own personal website.md",
     "_notes/Pastors and missionaries should consider their own personal website.md",
+    "_notes/Students should have their own personal website.md",
     "_notes/Academics should have their own personal website.md",
     "_notes/Starting a Personal Website.md",
     "_notes/Map of Content.md",
