--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -15,17 +15,6 @@
         }
       },
       {
-        "id": "0f625d730458db36",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "_notes/Students should have their own personal website.md",
-            "mode": "source"
-          }
-        }
-      },
-      {
         "id": "44271483eb84bd95",
         "type": "leaf",
         "state": {
@@ -74,8 +63,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
   "right": {
     "id": "0fccead5ac0483f1",
@@ -122,9 +110,9 @@
   "active": "44271483eb84bd95",
   "lastOpenFiles": [
     "_notes/Pastors and missionaries should consider their own personal website.md",
+    "_notes/Starting a Personal Website.md",
     "_notes/Students should have their own personal website.md",
     "_notes/Academics should have their own personal website.md",
-    "_notes/Starting a Personal Website.md",
     "_notes/Map of Content.md",
     "_notes/Christian Podcasts.md",
     "_notes/Things not to do on your personal website.md",
