--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,23 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "601d153550818ff5",
+        "id": "532f3ff56d41878d",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_notes/Academics should have their own personal website.md",
-            "mode": "source"
-          }
-        }
-      },
-      {
-        "id": "44271483eb84bd95",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "_notes/Pastors and missionaries should consider their own personal website.md",
+            "file": "_notes/Students should have their own personal website.md",
             "mode": "source"
           }
         }
@@ -79,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_notes/Pastors and missionaries should consider their own personal website.md",
+                "file": "_notes/Students should have their own personal website.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -96,7 +85,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "_notes/Pastors and missionaries should consider their own personal website.md"
+                "file": "_notes/Students should have their own personal website.md"
               }
             }
           }
@@ -107,11 +96,11 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "44271483eb84bd95",
+  "active": "532f3ff56d41878d",
   "lastOpenFiles": [
+    "_notes/Students should have their own personal website.md",
     "_notes/Pastors and missionaries should consider their own personal website.md",
     "_notes/Starting a Personal Website.md",
-    "_notes/Students should have their own personal website.md",
     "_notes/Academics should have their own personal website.md",
     "_notes/Map of Content.md",
     "_notes/Christian Podcasts.md",
